hphp/test/slow/parser/hh-reserved-name-noreturn-2.php.expectf
Fatal error: Cannot use 'HH\Noreturn' as class name as it is reserved in %s on line 4
